css/style.css
body {
	background-color: #ebebeb;
	background-size: cover;
}

h1 {
	font-family: "Trebuchet MS", Geneva, sans-serif;
	font-size: 3rem;
	display: flex;
	justify-content: center;
	flex-wrap: wrap;
	color: #fefefe !important;
}

.jumbotron  {
	background-color: #2b8eaa;
}

.capes {
	display: vertical-align;
	position: center;
}

.dragon {
	display: vertical-align;
}

.firecape {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
}

.questcape {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
}

.achievementcape {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
}

.musiccape {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
}

.maxcape {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
}

.dragonfullhelm {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:2%;
}

.dragonchainbody {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:2%;
}

.dragonplatelegs {
	opacity: 0.4;
	padding-left:5%;
	padding-right:6%;
	padding-bottom:2%;
}

.dragonplateskirt {
	opacity: 0.4;
	padding-left:2%;
	padding-right:3%;
	padding-bottom:2%;
}

.dragonsqshield {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:2%;
}

.dragon2hsword {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:2%;
}

.dragonspear {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:2%;
}

.dragonwarhammer {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:2%;
}

.dragondefender {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
}

.dragonpickaxe {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
}

.dragonaxe {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
}

.berserkerring {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:2%;
}

.seersring {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:2%;
}

.archersring {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:2%;
}

.warriorring {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:2%;
}

.seercull {
	opacity: 0.4;
	padding-left:1%;
	padding-right:3%;
}

.mudbattlestaff {
	opacity: 0.4;
	padding-left:3%;
	padding-right:1%;
}

.treasonousring {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:8%;
}

.tyrannicalring {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:8%;
}

.ringofthegods {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
}

.voidrange {
	opacity: 0.4;
	padding-left:3%;
	padding-right:4%;
	padding-bottom:2%;
}

.voidmelee {
	opacity: 0.4;
	padding-left:1%;
	padding-right:5%;
	margin-right: 3%;
	padding-bottom:2%;
}

.voidmage {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	border-right: 3%;
	padding-bottom:2%;
}

.voidtop {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:2%;
}

.voidelitetop {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:2%;
}

.voidmace {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:2%;
}

.voidrobe {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
}

.voideliterobe {
	opacity: 0.4;
	padding-left:6%;
	padding-right:6%;
}

.voidknightgloves {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
}

.gracefulhood {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:2%;
}

.gracefulcape {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:2%;
}

.gracefultop {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:2%;
}

.gracefulgloves {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:2%;
}

.gracefullegs {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:2%;
}

.gracefulboots {
	opacity: 0.4;
	padding-left:3%;
	padding-right:3%;
	padding-bottom:2%;
}

